[gd_scene load_steps=9 format=3 uid="uid://djobv0rw41w8o"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_7xslx"]
[ext_resource type="Texture2D" uid="uid://cp8ov6sftk706" path="res://assets/background.png" id="1_ssecl"]
[ext_resource type="PackedScene" uid="uid://bdmeuno5tx0gb" path="res://scenes/ship.tscn" id="2_eng7i"]
[ext_resource type="Shader" path="res://shader/level.gdshader" id="2_i8qum"]
[ext_resource type="PackedScene" uid="uid://c2us8qxbbrurn" path="res://scenes/hud.tscn" id="5_3248w"]
[ext_resource type="PackedScene" uid="uid://dgw6vtudok5tv" path="res://scenes/tutorial.tscn" id="7_eedix"]
[ext_resource type="PackedScene" uid="uid://dv4ua640tlm6o" path="res://scenes/game_over_menu.tscn" id="7_xl6ra"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmqfg"]
shader = ExtResource("2_i8qum")
shader_parameter/vel = -0.5
shader_parameter/displacement = 0.0

[node name="level" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7xslx")

[node name="background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_dmqfg")
layout_mode = 0
scale = Vector2(3, 3)
texture = ExtResource("1_ssecl")

[node name="ship" parent="." instance=ExtResource("2_eng7i")]
position = Vector2(360, 432)
scale = Vector2(2.5, 2.5)
motion_mode = 1

[node name="shoot_group" type="Node" parent="."]
editor_description = "Nesse grupo serão adicionadas (a partir da função shoot() em ship.gd) as instâncias dos tiros (shoot)"

[node name="asteroids_group" type="Node2D" parent="."]

[node name="asteroid_spawn_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="increase_ast_speed_timer" type="Timer" parent="."]
autostart = true

[node name="Canvas" type="Node2D" parent="."]

[node name="hud" parent="Canvas" instance=ExtResource("5_3248w")]

[node name="tutorial" parent="Canvas" instance=ExtResource("7_eedix")]

[node name="game_over_menu" parent="Canvas" instance=ExtResource("7_xl6ra")]
visible = false

[node name="explosion_group" type="Node2D" parent="."]

[connection signal="timeout" from="asteroid_spawn_timer" to="." method="_on_asteroid_spawn_timer_timeout"]
[connection signal="timeout" from="increase_ast_speed_timer" to="." method="_on_increase_ast_speed_timer_timeout"]
